--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+ * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 /* Smooth scroll */
 html {
   scroll-behavior: smooth;
@@ -6,7 +11,8 @@ html {
 /* Basic Reset */
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
+  
   background-color: #081b29;
 }
 
@@ -48,7 +54,11 @@ body {
   gap: 20px;
 }
 
-.nav-links a, .drop-label {
+/* about ka btn */
+.btn { 
+  font-family: Arial, Helvetica, sans-serif;  text-transform: 0;}  .btn:hover .btn-slide-show-text1 {  margin-left: 65px;}  .btn-background-slide {  width: 180px;  padding: 6px;  height: 50px;  color: rgb(255, 255, 255);  text-align: center;  position: absolute;  top: 350px;  left: 90px;  transform: translate(-50%, -50%);  border: 2px solid rgb(8, 43, 90);  overflow: hidden;  transition: 0.6s cubic-bezier(0.55, 0, 0.1, 1);  cursor: pointer;  box-shadow: rgb(16, 173, 160) 0px 0px 0px;}  .btn-background-slide:hover {  box-shadow: rgb(18, 18, 110) 8px 8px 0px, rgb(12, 48, 131) -8px -8px 0px;}  .btn-background-slide:hover .btn-background-slide-bg {  opacity: 1;  transform: translateZ(0px);}  
+
+.nav-links a, .drop-label { 
   color: white;
   text-decoration: none;
   font-weight: 500;
@@ -135,14 +145,36 @@ section {
   border-bottom: 1px solid #ddd;
 }
 p1{
-  font-size: 36px;
+  font-size: 90px;
   color: #219ebc;
+  
 }
 p2{
-  font-size: 29px;
-  color: #214abc;
+  font-size: 40px;
+  color: #89c2d9  ;
 }
 p3{
-  font-size: 20px;
-  color: #214abc;
+  font-size: 27px;
+  color: #0e15dc;
+}
+p4{
+    font-size: 72px;
+    color: aliceblue;
+}
+p5 
+  { font-size: 20px;
+    position: relative;
+    left: 540px;
+    bottom: 390px;
+     color: aliceblue;
+
+}
+p6{
+  color: aliceblue;
+  font-size: 70px;
+}
+p7{
+  position: relative;
+  color: aliceblue;
+  font-size: 30px;
 }
