--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
 
 /* about ka btn */
 .btn { 
-  font-family: Arial, Helvetica, sans-serif;  text-transform: 0;}  .btn:hover .btn-slide-show-text1 {  margin-left: 65px;}  .btn-background-slide {  width: 180px;  padding: 6px;  height: 50px;  color: rgb(255, 255, 255);  text-align: center;  position: absolute;  top: 350px;  left: 90px;  transform: translate(-50%, -50%);  border: 2px solid rgb(8, 43, 90);  overflow: hidden;  transition: 0.6s cubic-bezier(0.55, 0, 0.1, 1);  cursor: pointer;  box-shadow: rgb(16, 173, 160) 0px 0px 0px;}  .btn-background-slide:hover {  box-shadow: rgb(18, 18, 110) 8px 8px 0px, rgb(12, 48, 131) -8px -8px 0px;}  .btn-background-slide:hover .btn-background-slide-bg {  opacity: 1;  transform: translateZ(0px);}  
+  font-family: Arial, Helvetica, sans-serif;  text-transform: 0;}  .btn:hover .btn-slide-show-text1 {  margin-left: 65px;}  .btn-background-slide {  width: 180px;  padding: 6px;  height: 50px;  color: rgb(255, 255, 255);  text-align: center;  position: absolute;  top: 350px;  left: 90px;  transform: translate(-50%, -50%);  border: 2px solid rgb(8, 43, 90);  overflow: hidden;  transition: 0.6s cubic-bezier(0.55, 0, 0.1, 1);  cursor: pointer;  box-shadow: rgb(16, 173, 160) 0px 0px 0px;}  .btn-background-slide:hover {  box-shadow: rgb(18, 106, 179) 8px 8px 0px, rgb(18, 115, 171) -8px -8px 0px;}  .btn-background-slide:hover .btn-background-slide-bg {  opacity: 1;  transform: translateZ(0px);}  
 
 .nav-links a, .drop-label { 
   color: white;
@@ -69,7 +69,9 @@ body {
 .nav-links a:hover, .drop-label:hover {
   color: #00abf0;
 }
-
+.btn:hover{
+  color: #00abf0;
+}
 /* Dropdown styles */
 .dropdown {
   position: relative;
@@ -184,20 +186,20 @@ p5
 
 }
 p6{
-  color: aliceblue;
+  color: rgb(255, 255, 255);
   font-size: 70px;
 }
 p7{
   position: relative;
-  color: aliceblue;
+  color: rgb(163, 158, 233);
   font-size: 30px;
 }
 p8{
-  color: white;
+color: rgb(163, 158, 233);
   font-size: 30px;
 }
 p9{
-  color: white;
+color: rgb(163, 158, 233);
   font-size: 30px;
 }
 
@@ -237,9 +239,120 @@ p16
   color: white;
   font-size: 30px;
 }
+
+
 p17
 { position: relative;
-  left: 200px;
+  top: 280px;
+  left: 220px;
   color: white;
   font-size: 90px;
+  transition: 0.5s;
+}
+
+p17:hover {
+  color: #00abf0;
+}
+
+p18
+{ position: relative;
+  top: 280px;
+  left: 470px;
+  color: white;
+  font-size: 90px;
+  transition: 0.5s;
+}
+p18:hover {
+  color: #00abf0;
+}
+p19
+{ position: relative;
+  top: 280px;
+  left: 700px;
+  color: white;
+  font-size: 90px;
+  transition: 0.5s;
+}
+p19:hover {
+  color: #00abf0;
+}
+
+/* p20
+{ position: relative;
+  top: 280px;
+  left: 350px;
+  color: white;
+  font-size: 90px;
+} */
+
+.button-85 {
+  height: 90px;
+  width: 600px;
+  transition: 0.5s;
+  padding: 0.6em 2em;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  background: #0974a5;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+ justify-content: center;
+ font-size: 36px;
+}
+
+.button-85:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing-button-85 20s linear infinite;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+@keyframes glowing-button-85 {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.button-85:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #27729d;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+.button-85:hover {
+  color: #91eaad;
 }
