--- a/style.css
+++ b/style.css
@@ -83,12 +83,13 @@ body {
   position: absolute;
   top: 30px;
   left: 0;
-  background-color: #222;
+  background-color: #010101;
   flex-direction: column;
   min-width: 150px;
   border-radius: 4px;
   box-shadow: 0 4px 6px rgba(0,0,0,0.3);
   z-index: 10;
+  
 }
 
 .dropdown-menu a {
@@ -178,7 +179,7 @@ p4{
     font-size: 72px;
     color: aliceblue;
 }
-p5 
+p5
   { font-size: 20px;
     position: relative;
     left: 540px;
@@ -190,42 +191,21 @@ p6{
   color: rgb(255, 255, 255);
   font-size: 70px;
 }
-p7{
+.education{
+
   position: relative;
   color: rgb(94, 205, 239);
   font-size: 30px;
 }
-p8{
-  color: rgb(94, 205, 239);
-  font-size: 30px;
-}
-p9{
-  color: rgb(94, 205, 239);
-  font-size: 30px;
-}
-
 p10{
   color: aliceblue;
   font-size: 68px;
 }
-ps{
+
+.skills{  font-size: 25px;
   color: rgb(39, 202, 231);
 }
-p11{
-  
-  font-size: 25px;
-}
-p12{
-  
-  font-size: 25px;
-}
 
-p13{
-   font-size: 25px;
-}
-p14{
-   font-size: 25px;
-}
 pp{
   color: white;
   font-size: 30px; 
